# simplecppcalculator

./: CMakeLists.txt  Dockerfile  readme.md
.github/workflows/: CICD.yml
src/: CMakeLists.txt  app.cpp
